--- a/UI/package.json
+++ b/UI/package.json
@@ -3,14 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/react-hoc": "^4.0.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "apollo-boost": "^0.4.9",
     "apollo-react": "^0.7.1",
+    "bootstrap": "^4.5.1",
     "graphql": "^15.3.0",
     "react": "^16.13.1",
     "react-apollo": "^3.1.5",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
   },
